# bigdata2026-basic

./: .gitignore  02_basic.py  03_basic.py  06_if.py  README.md  main.py  pyproject.toml
data_analysis/: 01_pandas_basic.ipynb  02_pandas_basic.ipynb  04_health.ipynb  05_ch7_ex.ipynb  05_iris.ipynb  06_matplotlib_basic.ipynb  07_fine_dust.ipynb  10_subway_dg.py  11_daegu_bus_api.ipynb  12_analysis_data_pre.ipynb  13_no-show.ipynb  14_no-show-result.ipynb  16_scaling.ipynb  17_insurance.ipynb  ch09_happy.ipynb  day18_01_daegu_bus_api_worksheet.ipynb  day18_02_public_api_practice_collection.ipynb  day18_03_public_api_day2_visualization.ipynb  day18_04_bigdata_platform_requirements.ipynb  동대구역_월별승차추이.csv
data_analysis/dataFile/: insurance_missing.csv  professor.csv
mock_test/: 01_midleware_ex.py  02_midleware_ex.py  03_midleware_ex.py  04_midleware_ex.py  05_midleware_ex.py
python_advanced/: 02_class_basic.ipynb
python_basic/: 01_basic.py  04_list.py  05_dict.py  07_for.py  08_for.py  09_while.py  10_def.py  11_lambda.py  12_ex_01.py  12_ex_02.py  12_ex_03.py  13_class_basic.ipynb  13_pandas_basic.ipynb  14_pandas_basic.ipynb  15_file_basic.ipynb  15_pandas_basic.ipynb  16_file_csv.ipynb  16_pandas_basic.ipynb  17_file_ex.ipynb  18_file_json.ipynb  19_공공데이터포털실습.ipynb  20_enumerate.ipynb  21_cafemenu.py  21_librarysystem.py  21_scoresystem.py  21_scoresystem_v2.py  22_dict_zip.py  23_dict_ex.py  24_type_annotation.py  25_class_child.py  data2.txt  ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_07.py  ex_08.py  ex_09.py  (+3 more)
python_basic/dataFile/: club.txt  (+9 more)
